--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 ---
 layout: default
-title: Max4U
-tagline: Eerlijk besparen
+title: WOZexperts | Gratis bezwaar tegen uw WOZ beschikking
+description: WOZ, WOZ beschikking, bezwaar, gratis
 ---
 
 
-<header class="slide header" id="slide1" data-slide="1" data-stellar-background-ratio="0">
-  <div class="container clearfix" data-stellar-ratio="0.6">
+<header class="slide header" id="slide1" data-slide="1" data-stellar-background-ratio="0.3">
+  <div class="container clearfix" data-stellar-ratio="0.4">
     <div class="row-fluid">
-      <div class="span8">
-          <h1 class="">Ook u kunt eenvoudig geld verdienen door te besparen</h1>
-          <h2>Max4u rekent het zo voor u uit</h2>
-          <a href="#slide2" data-slide="2" class="btn btn-large btn-primary button">Lees over ons bespaarconcept</a>
+      <div class="span6">
+          <h1 class="">Uw lasten verlagen zonder hiervoor kosten te maken </h1>
+          <h3 class="white">de WOZexperts regelen dit voor u</h3>
+          <a href="#slide2" data-slide="2" class="btn btn-large btn-info button">lees meer</a>
+      </div>
+      <div class="span6 relative">
+       
       </div>
     </div>
   </div>
@@ -20,84 +23,110 @@ tagline: Eerlijk besparen
   </div>
 </header>
    
-<section class="slide geld-verdienen" id="slide2" data-slide="2" data-stellar-background-ratio="0.4">
+<section class="slide geld-verdienen graylighter" id="slide2" data-slide="2" data-stellar-background-ratio="0.4">
   <div class="container clearfix" data-stellar-ratio="1.2">
     <div class="row-fluid">
-        <div class="span10">
-          <div class="page-header">
-            <h2>Als ZZP-er bent u natuurlijk druk met uw eigen bedrijf.
-               En dat is, zeker in deze tijd, aanpoten geblazen
-            </h2>
-          </div>
-      </div>
-  </div>
-  <div class="container clearfix delay">
-      <div class="row-fluid">
-        <!--<div class="span4">
-          <img src="https://www.myenergy.com/assets/home_features_screen1.png" data-stellar-ratio="1.8"/>
-        </div>-->
-        <div class="span8">
-          <div class="content-block">
-            <h2><strong>
-              Maar weet u dat u maandelijks gemakkelijk geld kunt verdienen door te besparen op uw vaste uitgaven?</strong>
-            </h2>
-            <a href="#slide4" data-slide="4" class="button btn btn-large btn-primary"><i class="icon-circle-arrow-down"></i> volgende</a>
-          </div>
+        <div class="span9">
+            <h4>Uw WOZ-beschikking is veelal vastgesteld zonder dat de gemeente uw woning heeft bekeken.
+            Daardoor is deze vaak te hoog.
+            </h4>
+        </div>
+        <div class="span3">
+          <a href="#slide2" data-slide="2" class="btn btn-large btn-block btn-primary button">direct aanmelden</a>
         </div>
       </div>
   </div>
 </section>
 
-<section class="slide denken" id="slide4" data-slide="4">
+<section class="denken" id="slide4" data-slide="4">
   <div class="container">
     <div class="row-fluid">
-      <div class="span12">
-        <h1 class="center page-header">
-          En dan moet u vooral denken aan:
-        </h1>
+      <div class="span12 center">
+        <div class="page-header">
+          <h1>Waarom bezwaar maken</h1>
+        </div>
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span3">
-        <div class="icon-block leaf center">
-          <i class="icon-leaf"></i>
+      <div class="span6">
+        <div class="row-fluid">
+          <div class="span3">
+            <i class="icon-money icon-big"></i>
+          </div>
+          <div class="span8 offset1">
+            <h3>U betaald te veel</h3>
+            <p>
+              Indien u geen bezwaar maakt dan betaalt u ook op verschillende fronten teveel belasting.
+              Denkt u bijvoorbeeld aan de Onroerende Zaak Belasting (OZB), de rioolrechten, de aanslag
+              waterschapsbelasting, en uw inkomstenbelasting (eigenwoningforfait: in 2012 met 10% verhoogd).
+            </p>
+            <a class="link-icon link-icon--more" href="#">lees de veelgestelde vragen</a>
+          </div>
         </div>
-        <h4 class="center">Energiekosten</h4>
       </div>
-      <div class="span3">
-        <div class="icon-block center">
-          <i class="icon-phone"></i>
+      <div class="span6">
+        <div class="row-fluid">
+          <div class="span3">
+            <i class="icon-signin icon-big"></i>
+          </div>
+          <div class="span8 offset1">
+            <h3>Verlaging werkt door</h3>
+            <p>
+             Een verlaging werkt ook door ook in de opvolgende jaren, het is onze ervaring dat een gemeente
+            na een professioneel bezwaar de woz-waarde voortaan zorgvuldiger vaststeld. Uw voordeel is een
+            lastenverlichting, welke elk jaar weer zal doorwerken!
+            </p>
+            <a class="link-icon link-icon--more" href="#">lees meer over onze werkwijze</a>
+          </div>
         </div>
-        <h4 class="center">Telefoonkosten</h4>
-      </div>
-      <div class="span3">
-        <div class="icon-block center">
-          <i class="icon-rss"></i>
-        </div>
-        <h4 class="center">Internetaansluiting</h4>
-      </div>
-      <div class="span3">
-        <div class="icon-block center">
-          <i class="icon-briefcase"></i>
-        </div>
-        <h4 class="center">Verzekeringspremies</h4>
       </div>
     </div>
   </div>
+</section>
+
+<section class="slide" id="aanmelden" data-stellar-background-ratio="0.3">
+  <div class="container" data-stellar-ratio="1.3">
+    <div class="row-fluid">
+      <div class="span6">
+        <div class="well">
+          <h3>Eenvoudig aanmelden</h3>
+          <p>U kunt u eenvoudig aanmelden om uw bezwaar gratis en deskundig te laten uitvoeren door de
+            wozexperts.
+
+            Onze juristen zijn gespecialiseerd in de Wet woz en werken hiernaast veelal samen met uw lokale
+            makelaar, zodat een optimaal resultaat behaald kan worden.
+
+            De WOZexperts zijn landelijk georganiseerd en kunnen bezwaar maken in elke gemeente.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="pre-footer">
   <div class="container center">
     <div class="row-fluid">
       <div class="span12">
-        <h1>Max4U rekent het zo voor u uit</h1>
-        <h3>En wat zo fijn is.... <strong>dat kost u geen cent</strong>. Kijk dat is vast uw eerste besparing.</h3>
-      </div>
-      <div class="span6">
+        <h3>Een persoonlijk, zorgvuldig en deskundig bezwaar?</h3>
+        <div class="row-fluid">
+          <div class="span3">
+          </div>
+          <div class="span6">
+            <h5>Meldt u nu aan en wij starten <strong>direct</strong> een kosteloze WOZ bezwaarprocedure voor u op.
+            </h5>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row-fluid">
-      <div class="span3">
+    <div class="row-fluid btns">
+      <div class="span2">
       </div>
-      <div class="span6">
-        <a href="bespaarconcept.html" class="btn btn-primary btn-large btn-block">Hoe werkt dat nu eigenlijk</a>
+      <div class="span4">
+        <a href="" class="btn btn-primary btn-large btn-block">direct aanmelden</a>
+      </div>
+      <div class="span4">
+        <a href="" class="btn btn-info btn-large btn-block">lees meer over onze werkwijze</a>
       </div>
     </div>
   </div>
