--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ description: WOZ, WOZ beschikking, bezwaar, gratis
             <i class="icon-money icon-big"></i>
           </div>
           <div class="span8 offset1">
-            <h3>U betaald te veel</h3>
+            <h3>U betaalt te veel</h3>
             <p>
               Indien u geen bezwaar maakt dan betaalt u ook op verschillende fronten teveel belasting.
               Denkt u bijvoorbeeld aan de Onroerende Zaak Belasting (OZB), de rioolrechten, de aanslag
