--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Max4U
-tagline: Eerlijk besparen
+title: WOZexperts
+tagline: FAQ
 htmlextra: class="noheight"
 bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-offset="10"
 ---
