--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 	<div class="container relative">
 		<div class="row-fluid">
 			<div class="span3">
-				<ul class="nav nav-list affix-top hidden-phone" id="navlinks" data-spy="affix" data-offset-top="170">
+				<!--<ul class="nav nav-list affix-top hidden-phone" id="navlinks" data-spy="affix" data-offset-top="170">
 					<li><a href="#goedkoper"><i class="icon-chevron-right"></i>Waarom is MAX4U zo goedkoop?</a></li>
 				     <li><a href="#contract"><i class="icon-chevron-right"></i>Kan ik makkelijk van jullie af?</a></li>
 				     <li><a href="#zaken"><i class="icon-chevron-right"></i>Kan ik alles niet beter zelf regelen?</a></li>
@@ -24,7 +24,7 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 				     <li><a href="#achteraan"><i class="icon-chevron-right"></i>Aanvragen en opzeggen?</a></li>
 				     <li><a href="#adviseurs"><i class="icon-chevron-right"></i>De adviseurs?</a></li>
 				     <li><a href="#toezicht"><i class="icon-chevron-right"></i>Toezicht?</a></li>
-				</ul>
+				</ul>-->
 			</div>
 			<div class="span8">
 				<div class="page-header">
