--- a/werkwijze.html
+++ b/werkwijze.html
@@ -3,34 +3,35 @@ layout: default
 title: WOZ Experts
 tagline: Gratis bezwaar tegen uw WOZ aanslag
 ---
-<div class="contact-header">
-  <div class="container">
-    <a href="" class="btn btn-primary btn-large">direct aanmelden voor woz bezwaar</a>
-  </div>
-</div>
 
-<section class="slide deal" id="slide2" data-slide="2" data-stellar-background-ratio="0.4">
+<section class="werkwijze" id="werkwijze" data-slide="2" data-stellar-background-ratio="0.4">
   <div class="container" data-stellar-ratio="1.2">
     <div class="row-fluid">
-      <div class="span12 center">
-        <div class="page-header">
-          <h1>Onze werkwijze <small>helder en duidelijk</small></h1>
+      <div class="span6 white">
+        <div class="content">
+          <div class="page-header">
+            <h1>Onze werkwijze <small>helder en duidelijk</small></h1>
+          </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="span12">
-        <ol>
-          <li class="break-item">U besluit om niet meer te betalen dan u moet, op grond van de Wet woz</li>
-          <li class="break-item">U meldt zich aan de bij de WOZexperts</li>
-          <li class="break-item">Er wordt contact met u opgenomen</li>
-          <li class="break-item">Aan u wordt verzocht om aanvullende informatie</li>
-          <li class="break-item">Aan de hand van uw gegevens wordt een inschatting gemaakt of een bezwaar zinvol is</li>
-          <li class="break-item">Zo ja, dan wordt het bezwaar ingediend bij de gemeente</li>
-          <li class="break-item">Het bezwaar wordt vervolgens door de gemeente opgepakt en door de WOZexperts, indien nodig, nader onderbouwt met een taxatieverslag (zo blijven de kosten voor uw gemeente zo laag mogelijk)</li>
-          <li class="break-item">Aan de hand van alle motivatie dient de gemeente vervolgens, uiterlijk 31 december, een besluit te nemen</li>
-          <li class="break-item">Mocht dit besluit niet voldoende onderbouwd zijn en niet naar tevredenheid, dan bestaat de mogelijkheid om in beroep te gaan. Ook in deze procedure zijn de juristen van de WOZexperts volledig bekwaam en geschoold</li>
-        </ol>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row-fluid">
+      <div class="span8 white">
+          <ol>
+            <li class="break-item">U besluit om niet meer te betalen dan u moet, op grond van de Wet woz</li>
+            <li class="break-item">U meldt zich aan de bij de WOZexperts</li>
+            <li class="break-item">Er wordt contact met u opgenomen</li>
+            <li class="break-item">Aan u wordt verzocht om aanvullende informatie</li>
+            <li class="break-item">Aan de hand van uw gegevens wordt een inschatting gemaakt of een bezwaar zinvol is</li>
+            <li class="break-item">Zo ja, dan wordt het bezwaar ingediend bij de gemeente</li>
+            <li class="break-item">Het bezwaar wordt vervolgens door de gemeente opgepakt en door de WOZexperts, indien nodig, nader onderbouwt met een taxatieverslag (zo blijven de kosten voor uw gemeente zo laag mogelijk)</li>
+            <li class="break-item">Aan de hand van alle motivatie dient de gemeente vervolgens, uiterlijk 31 december, een besluit te nemen</li>
+            <li class="break-item">Mocht dit besluit niet voldoende onderbouwd zijn en niet naar tevredenheid, dan bestaat de mogelijkheid om in beroep te gaan. Ook in deze procedure zijn de juristen van de WOZexperts volledig bekwaam en geschoold</li>
+          </ol>
       </div>
     </div>
   </div>
