--- a/voordeel.html
+++ b/voordeel.html
@@ -5,7 +5,7 @@ tagline: Gratis bezwaar tegen uw WOZ aanslag
 ---
 <div class="contact-header">
   <div class="container">
-    <a href="" class="btn btn-primary btn-large">direct aanmelden voor woz bezwaar</a>
+    <a href="aanmelden.php" class="btn btn-primary btn-large">direct aanmelden voor woz bezwaar</a>
   </div>
 </div>
 
@@ -35,7 +35,7 @@ tagline: Gratis bezwaar tegen uw WOZ aanslag
         </p>
       </div>
       <div class="span6">
-      	<img src="http://2.s3.envato.com/files/7394202/YuriCT10Zeke-182.jpg">
+      	<img src="http://1.s3.envato.com/files/7455568/YuriCT15-07-MixBus-152.jpg">
       </div>
     </div>
     <div class="row-fluid">
