--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ bodyextra: class="home" id="home"
             </h4>
         </div>
         <div class="span3">
-          <a href="#slide2" data-slide="2" class="btn btn-large btn-block btn-primary button">direct aanmelden</a>
+          <a href="aanmelden.php" class="btn btn-large btn-block btn-primary button">direct aanmelden</a>
         </div>
       </div>
   </div>
