Update naar WOZ controledienst

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WOZexperts | Gratis bezwaar tegen uw WOZ beschikking
+title: WOZcontroledienst | Gratis bezwaar tegen uw WOZ beschikking
 description: WOZ, WOZ beschikking, bezwaar, gratis
 bodyextra: class="home" id="home"
 ---
@@ -16,8 +16,8 @@ bodyextra: class="home" id="home"
               <i class="icon-home"></i>
             </div>
             <div class="span9">
-              <h1 class="">Kosteloos uw lasten verlagen</h1>
-              <h3 class="">de WOZexperts regelen dit voor u</h3>
+              <h1 class="">U wilt weten of uw WOZ-beschikking klopt?</h1>
+              <h3 class="">De WOZcontroledienst maakt hem kloppend!</h3>
             </div>
           </div>
         </div>
@@ -94,12 +94,12 @@ bodyextra: class="home" id="home"
         <div class="well">
           <h3>Eenvoudig aanmelden</h3>
           <p>U kunt u eenvoudig aanmelden om uw bezwaar gratis en deskundig te laten uitvoeren door de
-            wozexperts.
+            WOZcontroledienst.
 
             Onze juristen zijn gespecialiseerd in de Wet woz en werken hiernaast veelal samen met uw lokale
             makelaar, zodat een optimaal resultaat behaald kan worden.
 
-            De WOZexperts zijn landelijk georganiseerd en kunnen bezwaar maken in elke gemeente.
+            De WOZcontroledienst is landelijk georganiseerd en kan voor u de juiste woz-beschikking regelen in elke gemeente.
           </p>
         </div>
       </div>
