--- a/voordeel.html
+++ b/voordeel.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WOZ Experts
+title: WOZcontroledienst
 tagline: Gratis bezwaar tegen uw WOZ aanslag
 ---
 <div class="contact-header">
@@ -35,7 +35,7 @@ tagline: Gratis bezwaar tegen uw WOZ aanslag
         </p>
       </div>
       <div class="span6">
-      	<img src="http://1.s3.envato.com/files/7455568/YuriCT15-07-MixBus-152.jpg">
+      	<img src="img/voordeel.jpg">
       </div>
     </div>
     <div class="row-fluid">
