--- a/werkwijze.html
+++ b/werkwijze.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WOZ Experts
+title: WOZcontroledienst
 tagline: Gratis bezwaar tegen uw WOZ aanslag
 ---
 
@@ -22,15 +22,15 @@ tagline: Gratis bezwaar tegen uw WOZ aanslag
     <div class="row-fluid">
       <div class="span8 white">
           <ol>
-            <li class="break-item">U besluit om niet meer te betalen dan u moet, op grond van de Wet woz</li>
-            <li class="break-item">U meldt zich aan de bij de WOZexperts</li>
-            <li class="break-item">Er wordt contact met u opgenomen</li>
+            <li class="break-item">U heeft het idee dat uw WOZ-beschikking te hoog is</li>
+            <li class="break-item">U meldt zich aan bij de WOZcontroledienst</li>
+            <li class="break-item">Onze juristen nemen contact met u op</li>
             <li class="break-item">Aan u wordt verzocht om aanvullende informatie</li>
-            <li class="break-item">Aan de hand van uw gegevens wordt een inschatting gemaakt of een bezwaar zinvol is</li>
-            <li class="break-item">Zo ja, dan wordt het bezwaar ingediend bij de gemeente</li>
-            <li class="break-item">Het bezwaar wordt vervolgens door de gemeente opgepakt en door de WOZexperts, indien nodig, nader onderbouwt met een taxatieverslag (zo blijven de kosten voor uw gemeente zo laag mogelijk)</li>
+            <li class="break-item">Aan de hand van uw gegevens wordt een inschatting gemaakt of uw waarde klopt én een bezwaar zinvol is</li>
+            <li class="break-item">Zoja, dan wordt het bezwaar ingediend bij de gemeente</li>
+            <li class="break-item">Het bezwaar wordt vervolgens door de gemeente opgepakt én door de wozcontroledienst, indien nodig, nader onderbouwt met een taxatieverslag (zo blijven de kosten voor uw gemeente zo laag mogelijk)</li>
             <li class="break-item">Aan de hand van alle motivatie dient de gemeente vervolgens, uiterlijk 31 december, een besluit te nemen</li>
-            <li class="break-item">Mocht dit besluit niet voldoende onderbouwd zijn en niet naar tevredenheid, dan bestaat de mogelijkheid om in beroep te gaan. Ook in deze procedure zijn de juristen van de WOZexperts volledig bekwaam en geschoold</li>
+            <li class="break-item">Mocht dit besluit niet voldoende onderbouwd zijn én niet naar tevredenheid, dan bestaat de mogelijkheid om in beroep te gaan. Ook in deze procedure zijn de juristen van de WOZcontroledienst volledig bekwaam en geschoold</li>
           </ol>
       </div>
     </div>
