--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WOZexperts
+title: WOZcontroledienst
 tagline: FAQ
 htmlextra: class="noheight"
 bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-offset="10"
@@ -38,23 +38,23 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 						De door mij gemaakte kosten komen voor vergoeding in aanmerking, hoe kan dat?
 					</h3>
 					<p>
-						Op het moment dat u een beroepsmatig juridisch adviseur inschakelt om namens u de bezwaar-en/of beroepsprocedure tegen de WOZ-beschikking te voeren, kan deze in het bezwaarschrift verzoeken om toekenning van een kostenvergoeding. Indien de beschikking wordt verminderd, is de gemeente verplicht de door u gemaakte kosten op grond van het Besluit Proceskosten Bestuursrecht te vergoeden. Wijst de gemeente het bezwaarschrift af, dan nemen De WOZ Experts de gemaakte kosten volledig voor haar rekening.
+						Op het moment dat u een beroepsmatig juridisch adviseur inschakelt om namens u de bezwaar-en/of beroepsprocedure tegen de WOZ-beschikking te voeren, kan deze in het bezwaarschrift verzoeken om toekenning van een kostenvergoeding. Indien de beschikking wordt verminderd, is de gemeente verplicht de door u gemaakte kosten op grond van het Besluit Proceskosten Bestuursrecht te vergoeden. Wijst de gemeente het bezwaarschrift af, dan neemt de WOZcontroledienst de gemaakte kosten volledig voor haar rekening.
 					</p>
 				</div>
 				<div id="contract" class="anchor-link">
 					<h3>
-						Waarom zou ik de bezwaarprocedure door de WOZ Experts laten doen en doe ik het niet zelf?
+						Waarom zou ik de bezwaarprocedure door de WOZcontroledienst  laten doen en doe ik het niet zelf?
 					</h3>
 					<p>
-						De WOZ Experts zijn experts op het gebied van de Wet WOZ. Met onze bedrijfsvoering kunnen wij deskundig bezwaar maken tegen uw WOZ-waarde, terwijl dit kosteloos is voor u. Onze registertaxateurs hebben daarnaast inzage in alle verkochte woningen in uw gemeente. Met onze deskundige hulp staat u bovendien vele malen sterker in uw bezwaar.
+						De juristen van de WOZcontroledienst zijn experts op het gebied van de Wet WOZ. Met onze bedrijfsvoering kunnen wij deskundig bezwaar maken tegen uw WOZ-waarde, terwijl dit kosteloos is voor u. Onze registertaxateurs hebben daarnaast inzage in alle verkochte woningen in uw gemeente. Met onze deskundige hulp staat u bovendien vele malen sterker in uw bezwaar.
 					</p>
 				</div>
 				<div id="zaken" class="anchor-link">
 					<h3>
-						Voor welke onroerende zaken kan ik de WOZ Experts inschakelen?
+						Voor welke onroerende zaken kan ik De WOZcontroledienst inschakelen?
 					</h3>
 					<p>
-						De WOZ Experts kunnen tegen alle onroerende zaken bezwaar maken. Denk bij voorbeeld aan eigen woningen, recreatiewoningen, garageboxen, (bouw)grond en bedrijfsobjecten.
+						Middels de WOZcontroledienst kunt u wat betreft alle onroerende zaken bezwaar maken. Denk bij voorbeeld aan eigen woningen, recreatiewoningen, garageboxen, (bouw)grond en bedrijfsobjecten.
 					</p>
 				</div>
 				<div id="bijhouden" class="anchor-link">
@@ -62,7 +62,7 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 						Wanneer weet ik of de WOZ-waarde van mijn woning is verlaagd?
 					</h3>
 					<p>
-						Na uw aanmelding stelt één van onze juridisch specialisten een bezwaarschrift op. Ter onderbouwing van de waarde stelt de Registertaxateur, indien nodig, een officieel taxatierapport op. Na indiening van het bezwaarschrift heeft de gemeente tot uiterlijk 31 december de tijd om een uitspraak op het bezwaarschrift te doen. Meestal is dit echter binnen enkele maanden.
+						Na uw aanmelding stelt één van onze juridisch specialisten een bezwaarschrift op. Ter onderbouwing van de waarde stelt de registertaxateur, indien nodig, een officieel taxatierapport op. Na indiening van het bezwaarschrift heeft de gemeente tot uiterlijk 31 december de tijd om een uitspraak op het bezwaarschrift te doen. Meestal is dit echter binnen enkele maanden.
 					</p>
 				</div>
 				<div id="kwaliteit" class="anchor-link">
@@ -78,12 +78,12 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 						Wat gebeurt er als de uitkomst van het bezwaarschrift negatief is?
 					</h3>
 					<p>
-						Als de gemeente niet tegemoet komt aan het bezwaarschrift, kunnen de WOZ Experts beroep aantekenen bij de Rechtbank.
+						Als de gemeente niet tegemoet komt aan het bezwaarschrift, kan de WOZcontroledienst, namens u, beroep aantekenen bij de Rechtbank.
 					</p>
 				</div>
 				<div id="afspraak" class="anchor-link">
 					<h3>
-						Ik heb zelf bezwaar ingediend. Mijn bezwaar is echter door de gemeente afgewezen. Kan ik de WOZ Experts inschakelen om verdere stappen te ondernemen?
+						Ik heb zelf bezwaar ingediend. Mijn bezwaar is echter door de gemeente afgewezen. Kan ik de WOZcontroledienst inschakelen om verdere stappen te ondernemen?
 					</h3>
 					<p>
 						Ja, dit is mogelijk (zie ook het volgende punt);
@@ -91,10 +91,10 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 				</div>
 				<div id="achteraan" class="anchor-link">
 					<h3>
-						Kan ik de WOZ Experts inschakelen voor alleen de beroepsprocedure?
+						Kan ik de WOZcontroledienst inschakelen voor alleen de beroepsprocedure?
 					</h3>
 					<p>
-						Ja, ook de beroepsprocedure (beroepschrift) verzorgen De WOZ Experts kosteloos voor u. U kunt zich op de normale wijze aanmelden. Voor het instellen van beroep bent u aan de Rechtbank griffierechten verschuldigd (circa € 41,-). Wanneer wij van de rechter gelijk krijgen, betaalt de gemeente dit bedrag aan u terug. En heeft u alle fiscale voordelen.
+						Ja, ook de beroepsprocedure (beroepschrift) kan de WOZcontroledienst kosteloos voor u. U kunt zich op de normale wijze aanmelden. Voor het instellen van beroep bent u aan de Rechtbank griffierechten verschuldigd (circa € 41,-). Wanneer wij van de rechter gelijk krijgen, betaalt de gemeente dit bedrag aan u terug. En heeft u alle fiscale voordelen.
 					</p>
 				</div>
 				<div id="toezicht" class="anchor-link">
@@ -110,7 +110,7 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 						Als ik een woning heb gekocht, kan ik dan nog bezwaar maken tegen de WOZ- waarde van de woning?
 					</h3>
 					<p>
-						Ja, als u net een huis heeft gekocht, is dit in de huidige tijd, voor een koopsom, welke vaak lager is dan de geldende woz-waarde. U betaalt dan aantoonbaar te veel belasting. De WOZ Experts verzorgen dan kosteloos het gehele traject om uw woz-waarde alsnog omlaag te krijgen.
+						Ja, als u net een huis heeft gekocht, is dit in de huidige tijd, voor een koopsom, welke vaak lager is dan de geldende woz-waarde. U betaalt dan aantoonbaar te veel belasting. De WOZcontroledienst verzorgt dan kosteloos het gehele traject om uw woz-waarde alsnog omlaag te krijgen.
 					</p>
 				</div>
 				<div id="toezicht" class="anchor-link">
@@ -118,15 +118,15 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 						Waar is mijn taxatieverslag?
 					</h3>
 					<p>
-						Tegenwoordig zijn gemeentes niet verplicht om een taxatieverslag mee te sturen met de woz-beschikking. U kunt dit via DigiD opvragen. De WOZ Experts kunnen dit echter ook middels een verzoek bij de gemeente.
+						Tegenwoordig zijn gemeentes niet verplicht om een taxatieverslag mee te sturen met de woz-beschikking. U kunt dit via DigiD opvragen. De WOZcontroledienst kan dit echter ook voor u doen, middels een verzoek bij de gemeente.
 					</p>
 				</div>
 				<div id="toezicht" class="anchor-link">
 					<h3>
-						De taxateur komt langs, is hij verbonden met de WOZ Experts?
+						De taxateur komt langs, is hij verbonden met de WOZcontroledienst?
 					</h3>
 					<p>
-						Het kan altijd zo zijn dat een taxatieverslag noodzakelijk is om de gemeente te overtuigen van de juiste waarde. De dan ingeschakelde taxateur dient kennis te hebben van de lokale markt. Hiervoor nemen De WOZ Experts het liefst contact met een lokale taxateur. Zo zijn uw belangen het beste gediend.
+						Het kan altijd zo zijn dat een taxatieverslag noodzakelijk is om de gemeente te overtuigen van de juiste waarde. De dan ingeschakelde taxateur dient kennis te hebben van de lokale markt. Hiervoor neemt de WOZcontroledienst het liefst contact met een lokale taxateur. Zo zijn uw belangen het beste gediend.
 					</p>
 				</div>
 				<div id="toezicht" class="anchor-link">
@@ -134,15 +134,15 @@ bodyextra: class="faq" id="faq" data-spy="scroll" data-target="#navlinks" data-o
 						Kan het écht voor mij kosteloos?
 					</h3>
 					<p>
-						Kosteloos zullen wij van De WOZ Experts onze dienstverlening niet noemen. Ook onze gezinnen willen graag eten op tafel. Wel kunnen we het voor u zo doen dat u er geen kosten aan overhoud. Dat kunnen we zo doen, doordat De WOZ Experts gespecialiseerd zijn in een beperkt gebied: namelijk de Wet woz. Wij handelen dagelijks tientalen dossiers af, welke allen alleen over de Wet woz gaan. Juist deze werkwijze levert een enorme tijdsbesparing op, een voordeel welke we u dan kunnen geven.
+						Kosteloos zullen de juristen van de WOZcontroledienst onze dienstverlening niet noemen. Ook onze gezinnen willen graag eten op tafel. Wel kunnen we het voor u zo doen dat u er geen kosten aan overhoud. Dat kunnen we zo doen, doordat de WOZcontroledienst gespecialiseerd is in een beperkt gebied: namelijk de Wet woz. Wij handelen dagelijks tientallen dossiers af, welke allen alleen over de Wet woz gaan. Juist deze werkwijze levert een enorme tijdsbesparing op, een voordeel welke we u dan kunnen geven.
 					</p>
 				</div>
 				<div id="toezicht" class="anchor-link">
 					<h3>
-						Nemen De WOZ Experts voor mij alles uit handen?
+						Neemt de WOZcontroledienst voor mij alles uit handen?
 					</h3>
 					<p>
-						U heeft inderdaad geen omkijken naar de procedure. Wel kan het zo zijn dat we aan u extra informatie vragen. De WOZ Experts weten dan ook precies welke vragen belangrijk zijn, zodat u niet vermoeid wordt met zinloze tijdsverspilling.
+						U heeft inderdaad geen omkijken naar de procedure. Wel kan het zo zijn dat we aan u extra informatie vragen. De juristen van de WOZcontroledienst weten dan ook precies welke vragen belangrijk zijn, zodat u niet vermoeid wordt met zinloze tijdsverspilling.
 					</p>
 				</div>
 				
